--- a/it.univaq.disim.typhonml.parent/bundles/it.univaq.disim.typhonml.edit/plugin.properties
+++ b/it.univaq.disim.typhonml.parent/bundles/it.univaq.disim.typhonml.edit/plugin.properties
@@ -232,3 +232,8 @@ _UI_Cardinality_zero_many_literal = zero_many
 _UI_Cardinality_one_many_literal = one_many
 _UI_GraphEdge_entity_feature = Entity
 _UI_Collection_indexSpec_feature = Index Spec
+_UI_ChangePrimitiveDataTypeAttribute_newType_feature = New Type
+_UI_AddCustomDataType_type = Add Custom Data Type
+_UI_AddPrimitiveDataTypeAttribute_type = Add Primitive Data Type Attribute
+_UI_AddPrimitiveDataTypeAttribute_type_feature = Type
+_UI_AddCustomDataTypeAttribute_type_feature = Type
