--- a/it.univaq.disim.typhonml.parent/bundles/it.univaq.disim.typhonml.xtext/pom.xml
+++ b/it.univaq.disim.typhonml.parent/bundles/it.univaq.disim.typhonml.xtext/pom.xml
@@ -100,7 +100,7 @@
                             -p
                         </argument>
                         <argument>
-                            rootPath=.
+                            workspace=.
                         </argument>
                     </arguments>
                 </configuration>
