--- a/it.univaq.disim.typhonml.parent/bundles/it.univaq.disim.typhonml.xtext/pom.xml
+++ b/it.univaq.disim.typhonml.parent/bundles/it.univaq.disim.typhonml.xtext/pom.xml
@@ -7,10 +7,10 @@
 		<version>1.0.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
-	<properties>
+<!--	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-	</properties>
+	</properties>-->
 
 	<artifactId>it.univaq.disim.typhonml.xtext</artifactId>
 	<packaging>eclipse-plugin</packaging>
