--- a/it.univaq.disim.typhonml.parent/releng/it.univaq.disim.typhonml.update/pom.xml
+++ b/it.univaq.disim.typhonml.parent/releng/it.univaq.disim.typhonml.update/pom.xml
@@ -13,7 +13,7 @@
 			<plugin>
          	<groupId>org.eclipse.tycho</groupId>
          	<artifactId>tycho-p2-repository-plugin</artifactId>
-         	<version>${tycho.version}</version>
+         	<version>${tycho-version}</version>
       	</plugin>
 	</plugins>
 	</build>
